# BioMedPilot-Terms

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: candidate_query_fragment.yml  candidate_term.yml  config.yml  docs_or_policy.yml
docs/: database_query_fragment_rules.md  how_to_add_terms.md  naming_conventions.md  private_asset_boundary.md  review_rules.md
examples/query_fragments/: geo_thyroid_cancer_basic.example.json  pubmed_thyroid_cancer_basic.example.json
examples/terms/: biomarker_thyroglobulin.example.json  disease_thyroid_cancer.example.json  method_rna_seq.example.json  tissue_thyroid.example.json
schemas/: query_fragment.schema.json  term_entry.schema.json
tests/: test_example_query_fragments.py  test_example_term_files.py
