[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "biomedpilot-terms"
version = "0.1.0"
description = "Open biomedical term contribution schema and sample resources for BioMedPilot"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "BioMedPilot" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "jsonschema>=4.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
py-modules = []
